edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;

message LogImbue {
  string id = 1; // @gotags: sql:"pk"
  google.protobuf.Timestamp timestamp = 2; // @gotags: search:"Log Imbue Creation Time,hidden"
  bytes log = 3;
}
